# studious-succotash

./: README.md  pubspec.yaml
integration_test/: simple_test.dart
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart
lib/src/save/: save_service.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
