[package]
name = "rust_lib_my_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
once_cell = "1.19"
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite_migration = "2.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
